[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-converter"
version = "1.0.0"
description = "Convert files and folders into machine-readable format for AI tools"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Code Converter Team", email = "codeconverter@example.com"}
]
keywords = ["code", "converter", "ai", "tools", "chatgpt", "machine-readable"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Tools",
    "Topic :: Text Processing",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/yourusername/code-converter"
Repository = "https://github.com/yourusername/code-converter"
Issues = "https://github.com/yourusername/code-converter/issues"
Documentation = "https://github.com/yourusername/code-converter#readme"

[project.scripts]
code_converter = "code_converter.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["code_converter*"]
